classDiagram
    direction LR

    namespace Metier {
        class TPE {
            +TypeTPE typeTPE
            +String numeroSerie
            +String numeroTerminal
            +StatutTPE statut
            +String marque
            +String modele
            +LocalDate dateAcquisition
            +LocalDate dateMiseEnService
            +String mcc
            +String numeroAffiliation
            +String commentaire
        }

        class Commercant {
            +String raisonSociale
            +String activite
            +String numeroCompte
            +String adresse
            +String codeAgence
            +String telephone
            +String email
            +StatutCommercant statut
            +Double loyer
            +TypeTPE typeCommerce
        }

        class Demande {
            +String reference
            +TypeTPE typeDemande
            +StatutDemande statut
            +Urgence urgence
            +String description
            +String commentaireValidation
            +String numeroTerminal
            +String urlSiteMarchand
        }

        class Affectation {
            +LocalDate dateAffectation
            +LocalDate dateMiseEnService
            +LocalDate dateFin
            +Boolean actif
            +String bonLivraisonPath
            +String contratPath
        }

        class Panne {
            +String reference
            +StatutPanne statut
            +String description
            +LocalDateTime dateDeclaration
            +LocalDateTime dateDiagnostic
            +LocalDateTime dateReparation
            +LocalDateTime dateResolution
            +Double coutReparation
            +Boolean sousGarantie
        }

        class Taux {
            +Double ancienTauxCommission
            +Double nouveauTauxCommission
            +Double ancienTauxCommissionInter
            +Double nouveauTauxCommissionInter
            +StatutTaux statut
            +LocalDateTime dateSaisie
            +LocalDateTime dateValidation
            +LocalDateTime dateApplication
            +Boolean actif
        }

        class User {
            +String username
            +String nom
            +String prenom
            +String email
            +String telephone
            +String codeAgence
            +Boolean actif
        }

        class Role {
            +Long id
            +RoleType name
            +String description
        }
    }

    TPE "0..1" --> "1" Commercant : rattachement
    Commercant "1" o-- "*" TPE : parcTPE
    Commercant "1" o-- "*" Demande : demandes
    Commercant "1" o-- "*" Taux : taux

    Demande "1" --> "1" Commercant : concerne
    Demande "1" --> "1" User : demandeur
    Demande "0..1" --> "1" User : valideur
    Demande "0..1" --> "1" Affectation : donneLieuA

    Affectation "1" --> "1" TPE : tpe
    Affectation "1" --> "1" Commercant : commercant
    Affectation "0..1" --> "1" Demande : source
    Affectation "0..1" --> "1" User : affectePar

    Panne "1" --> "1" TPE : tpe
    Panne "0..1" --> "1" TPE : tpeRemplacement
    Panne "1" --> "1" User : declarant
    Panne "0..1" --> "1" User : technicien

    Taux "1" --> "1" Commercant : commercant
    Taux "1" --> "1" User : inputer
    Taux "0..1" --> "1" User : authorizer

    User "*" -- "*" Role : roles